# fcl_senior_design

./: .gitignore  Copy of Basic Outline of Gantt Chart Template - without Formulae.ods  Copy of Basic Outline of Gantt Chart Template - without Formulae.xlsx  README.md
.github/workflows/: WingFlasher.yml
Fall 2025/Hours Log/: Flight Controls Work Hours Log.xlsx
Fall 2025/Notes/: Notes for Senior Design Meetings.docx
Fall 2025/Proposal/: Proposal_Draft.docx
desktop_app/: README  decode.py  flightDump.csv  log.csv  log_with_graph.ods  plotcsv.py  requirements.txt  testsend.py  wireless_logging.py
desktop_app/crazyflie/: BatteryCheck.py  LogableValues.txt  controls.py  imu.py  param.py  parameters.py  test.py  verify.py
desktop_app/dev_apps/: dev_app.ui
desktop_app/wingfeather_app/: README.md  WingFlasher.spec  pyproject.toml
desktop_app/wingfeather_app/config/: commands.txt
desktop_app/wingfeather_app/src/WingFlasher/: main.py
drone-firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  software_stack.md
drone-firmware/components/batt_adc/: CMakeLists.txt  batt_adc.c
drone-firmware/components/board/: CMakeLists.txt  board.c
drone-firmware/components/crazyflie/: CMakeLists.txt
drone-firmware/components/crazyflie/hal/interface/: pm_esplane.h
drone-firmware/components/crazyflie/hal/src/: freeRTOSdebug.c  pm_esplane.c  sensors_mpu6050_hm5883L_ms5611.c  wifilink.c
drone-firmware/components/crazyflie/modules/interface/: pid.h
drone-firmware/components/crazyflie/modules/src/: app_channel.c  console.c  crtp.c  crtp_commander_generic.c  crtp_commander_high_level.c  estimator_complementary.c  estimator_kalman.c  log.c  pid.c  power_distribution_stock.c  sound_cf2.c  stabilizer.c  sysload.c  system.c  worker.c
drone-firmware/components/crazyflie/utils/src/: cfassert.c  configblockeeprom.c
drone-firmware/env/: commands.txt  flash.py  params.txt  pyproject.toml  received_from_esp.txt  serial_send5.py
drone-firmware/main/: CMakeLists.txt  idf_component.yml  main.c
fall_2025/Mathematical Model/: Flight Controls Mathematical Model.pptx  Linearizations.docx  Mathematical_Model.slx
fall_2025/PCB_Design/: 2025_10_18_Parts_List_Draft.md
fall_2025/notes/: 2025_10_10_discussed.md  2025_10_7_Dr_Kohl_Meeting.md  2025_8_28_PCB_Workshop.md  2025_9_12_discussed.md  2025_9_12_to_discuss.md  2025_9_19_discussed.md  2025_9_21_Weight_Estimate.md  2025_9_26_discussed.md  2025_9_26_to_discuss.md
fall_2025/proposal/: 2025_09_11_Milestones.md  2025_9_11_Assignments.md  2025_9_11_Strategy.md  2025_9_11_Test_Plan.md  Budget Flight Controls(Old).xlsx  Budget Flight Controls.xlsx
fall_2025/semester_presentation/: game_plan.md
fall_2025/status_presentation/: 2025_10_23_Brainstorming.md
frame/: Drone Frame 6 Senior Design.f3d  Drone Frame 6 Senior Design.stl  Drone Frame 6.1 Senior Design.f3d
resources/hardware_examples/: README.md
spring_2026/: 2026_04_16_Assignments.md  ScriptingWriteup.md
spring_2026/PCB_Design/: 2025_01_09_Board_v2_Notes.md
spring_2026/final_report/: final_report.tex
spring_2026/hours_log/: hours_log.md
spring_2026/notes/: 2025_01_09_Meeting_with_Dr_Kohl.md  2025_01_11_PWM_Research.md  2026_1_16_ADC_Work.md  2026_1_27_Meeting.md
spring_2026/user_manual/: user_manual.tex
wingfeather_app/assets/: README.md
wingfeather_app/config/: params.txt
(+194 files in other folders)
