[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingfeather-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esptool>=4.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pyqt6>=6.11.0",
    "pyserial>=3.5",
]

[project.gui-scripts]
wingflasher = "WingFlasher.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/WingFlasher"]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
